<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>HierarchyWidget</class>
 <widget class="QWidget" name="HierarchyWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>141</width>
    <height>192</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Hierarchy</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QListWidget" name="listWidget"/>
   </item>
   <item>
    <widget class="QPushButton" name="addButton">
     <property name="text">
      <string>Add Entity</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPushButton" name="duplicateButton">
     <property name="text">
      <string>Duplicate Entity</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPushButton" name="removeButton">
     <property name="text">
      <string>Remove Entity</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
